// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OwnersListContext should fetch the owners list for the selected element that includes filtered components: mount 1`] = `
[root]
  ▾ <Grandparent>
      <Child>
      <Child>
`;

exports[`OwnersListContext should fetch the owners list for the selected element that includes filtered components: owners for "Child" 1`] = `
Array [
  Object {
    "displayName": "Grandparent",
    "id": 7,
  },
  Object {
    "displayName": "Parent",
    "id": 9,
  },
  Object {
    "displayName": "Child",
    "id": 8,
  },
]
`;

exports[`OwnersListContext should fetch the owners list for the selected element: mount 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <Parent>
        <Child>
        <Child>
`;

exports[`OwnersListContext should fetch the owners list for the selected element: owners for "Child" 1`] = `
Array [
  Object {
    "displayName": "Grandparent",
    "id": 2,
  },
  Object {
    "displayName": "Parent",
    "id": 3,
  },
  Object {
    "displayName": "Child",
    "id": 4,
  },
]
`;

exports[`OwnersListContext should fetch the owners list for the selected element: owners for "Parent" 1`] = `
Array [
  Object {
    "displayName": "Grandparent",
    "id": 2,
  },
  Object {
    "displayName": "Parent",
    "id": 3,
  },
]
`;

exports[`OwnersListContext should include the current element even if there are no other owners: mount 1`] = `
[root]
    <Grandparent>
`;

exports[`OwnersListContext should include the current element even if there are no other owners: owners for "Grandparent" 1`] = `
Array [
  Object {
    "displayName": "Grandparent",
    "id": 5,
  },
]
`;
